Add rswag for reservations_create
